--- a/scrollTo.html
+++ b/scrollTo.html
@@ -26,7 +26,7 @@
     window.seamless.connect();
   </script>
 
-  window.scrollTo(0,0);
+  window.parent.scrollTo(0,0);
 
   <div class="container">
     <button>Scroll to top</button>
@@ -36,7 +36,7 @@
     document.addEventListener('DOMContentLoaded', function() {
       const button = document.querySelector('button');
       button.onclick = function () {
-        window.scrollTo(0,0);
+        window.parent.scrollTo(0,0);
       }
     });
   </script>
