Reproduce cross-origin issue

--- a/parent/index.html
+++ b/parent/index.html
@@ -23,8 +23,8 @@
   </script>
 
   <div class="container">
-    <iframe height="200" width="200" src="scrollTo.html" ></iframe>
-    <iframe height="200" width="200" src="scrollIntoView.html"></iframe>
+    <iframe height="200" width="200" src="http://192.168.178.97:3001/scrollTo.html" ></iframe>
+    <iframe height="200" width="200" src="http://192.168.178.97:3001/scrollIntoView.html"></iframe>
   </div>
 </body>
 </html> 
